fixed the overlapped letter plus blurring the pictures on index-html

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -127,6 +127,8 @@ body{
     font-weight: 600;
     font-size: 30px;
     color: #16697a;
+    color: #145d6c;
+    text-shadow: 2px 2px #595959;
 }
 .box-wrap{
     position: relative;
@@ -141,6 +143,7 @@ body{
     left: 0;
     width: 450px;
     height: 450px;
+    opacity: 0.5;
 }
 .box-text{
     width: fit-content;
@@ -184,7 +187,7 @@ body{
 
 
 
-.ml9 {
+.ml9, .ml10, .ml11 {
     position: relative;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
@@ -193,7 +196,7 @@ body{
     top: 200px;
 }
 
-.ml9 .text-wrapper {
+.ml9 .text-wrapper, .ml10 .text-wrapper, .ml11 .text-wrapper {
     position: relative;
     display: inline-block;
     padding-top: 0.2em;
@@ -202,7 +205,7 @@ body{
     overflow: hidden;
 }
 
-.ml9 .letter {
+.ml9 .letter, .ml10 .letter, .ml11 .letter {
     transform-origin: 50% 100%;
     display: inline-block;
     line-height: 1em;
